доработано ещё несколько команд